<h3>December 8, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-december-release" target="_blank">Frostline</a> data export.




<h3>November 4, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-parallax" target="_blank">Parallax</a> data export.




<h3>September 30, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-vanguard" target="_blank">Vanguard</a> data export.




<h3>September 03, 2015</h3>
<b><u>SCANNING</u></b>
 - Fixed a bug in the wormhole auto-naming algorithm.




<h3>August 25, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-galatea" target="_blank">Galatea</a> data export.
<b><u>SCANNING</u></b>
 - Fix a fatal error message when trying to open the connection popup for an unmapped wormhole originating in a kspace system.




<h3>August 21, 2015</h3>
<b><u>SCANNING</u></b>
 - Jumplog: Per request, allow addition of custom mass amount to a wormhole jump log.
 - Signature list: On small windows, the info hover on a signature would fall off screen. Moved info hover panel on screen on small windows.




<h3>July 19, 2015</h3>
<b><u>SERVER</u></b>
 - Succesfully moved vippy to a new server at a different hosting company.
        As most of you guys will have noticed, the previous one had to much interuptions.




<h3>July 10, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-aegis" target="_blank">Aegis</a> data export.




<h3>June 3, 2015</h3>
<b><u>VIPPY</u></b>
 - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-carnyx" target="_blank">Carnyx</a> data export.
<b><u>FIXES</u></b>