@@ -1,5 +1,13 @@
 <h3>December 8, 2015</h3>
 <b><u>VIPPY</u></b>
+ - Per request, added an option for every chain to restrict certain actions (such as reposition system, delete system, etc).
+    CEO and Directors can set these on the admin tab in managed chains.
+
+
+
+
+<h3>December 8, 2015</h3>
+<b><u>VIPPY</u></b>
  - Updated to <a href="http://community.eveonline.com/news/patch-notes/patch-notes-for-december-release" target="_blank">Frostline</a> data export.
 
 
